<resources>
    <string name="app_name">AbuYoYo - Driver</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_fullname">Full name</string>
    <string name="id">Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="not_have_account">Don\'t have an account? Sign Up!</string>
    <string name="please_log_in">Please Log In</string>
    <string name="fast_trip">Fast Trip</string>
    <string name="search_trips">Search Trips</string>
    <string name="trips_history">Trips History</string>
    <string name="account">Account</string>
    <string name="location">location</string>
    <string name="from">FROM:</string>
    <string name="Destination">destention</string>
    <string name="where">WHERE:</string>
    <string name="num">num</string>
    <string name="destination_from_string_app_name">Destination from @string/app_name</string>
    <string name="the_num">the Num</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="passenger_name">passenger name</string>
    <string name="passenger_phone">passenger phone</string>
    <string name="action_settings">action settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
