<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_dark"
    app:cardBackgroundColor="@color/colorButton2">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/list_item_trip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/passengerLocationTextView"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/location"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/destinationTextView"
            app:layout_constraintEnd_toStartOf="@+id/textViewNumDes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/destinationTextView"
            android:layout_width="225dp"
            android:layout_height="21dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/Destination"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewNumDes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passengerLocationTextView" />

        <TextView
            android:id="@+id/textViewNumDes"
            android:layout_width="112dp"
            android:layout_height="103dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/the_num"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>



</android.support.v7.widget.CardView>